force-app/main/default/objects/Case_Assignment__c/Case_Assignment__c.object-meta.xml
<CustomObject>
    <label>Case Assignment</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Case Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>