force-app/main/default/objects/Case_Assignment__c/fields/Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Status__c</fullName>
    <label>Assignment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Assigned</fullName><default>true</default><label>Assigned</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Escalated</fullName><default>false</default><label>Escalated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>